2000-07-14  Peter Williams  <peterw@helixcode.com>

	* camel-object.c : Implement 'events', which are suspiciously
	like signals except without all the marshalling baggage, and
	with quasi-thread-safety.
	(camel_object_class_declare_event): New func.
	(camel_object_hook_event): Ditto.
	(camel_object_trigger_event): Ditto.
	(obj_class_init): Declare the "finalize" event.
	(obj_class_finalize): Free the hashtable of events->preps
	(obj_finalize): Free the hashtable of events->hooklists
	(camel_object_unref): Trigger the finalize event (ourselves,
	to prevent massively unpleasant looping things.)
	
2000-07-14  Peter Williams  <peterw@helixcode.com>
	
	* camel-object.c (make_global_classfuncs): Change to return
	a CamelObjectClass. Change parents to a GSList and free it
	when done.
	(camel_object_new): Don't allocate a classfuncs for every object;
	merely give it a reference to the global_classfuncs. Convert
	parents to a GSList and free it when done.
	(camel_object_unref): Don't free the classfuncs. Free the parents
	list, which is changed to a GSList.

2000-07-13  Peter Williams  <peterw@helixcode.com>

	* camel-object.c: Rewritten to not be based on GtkObject,
	but a tiny threadsafe ripoff thereof. Objects still cannot
	be shared across threads, but ref/unref/destroy/new/etc
	will work. Signals are not implemented because doing it
	robustly would be a major pain in the butt, but class
	functions are. There's a small demonstration that it doesn't
	crash in ./temp-test.c: build it with ./make-test.sh.
	* camel-stream.c, camel-seekable-stream.c, camel-stream-mem.c:
	moved over to CamelObject. Proof of concept: two levels of
	subclass and class functions, all working without coredumps.
	To port to CamelObject:
	- s,GTK_,CAMEL_,g in the cast checks
	- s,gtk_type_new,camel_object_new,g
	- s,GtkType,CamelType,g
	- Change get_type function over to camel_type_declare
	- instead of hooking to finalize function, it goes into the
	  type declaration.
	- remove signals.